--- a/about.html
+++ b/about.html
@@ -24,19 +24,47 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main class="content">
-    <h1>About Me</h1>
-    <p>Hi, I’m Tito. I’ve been a wine judge, a field service engineer, and a patient fighting for his life — sometimes all at the same time.</p>
+    <main class="content">
+    <h1>About Tito</h1>
+    
+    <section class="callout">
+      <p>
+        Hi, I’m Tito—a two-time kidney transplant recipient. I’ve been through dialysis,
+        surgeries, and the long road to recovery. This site is where I share what I wish
+        I had known: honest stories, helpful resources, and practical tips for navigating
+        kidney disease and transplant life.
+      </p>
+    </section>
 
-    <p>I was diagnosed with kidney disease in my twenties, after a kidney stone and a routine checkup led to a diagnosis I never expected: IgA nephropathy. It slowly wrecked my kidneys until I needed dialysis to stay alive. I’ve since gone through more than 300 dialysis treatments, two kidney transplants, and eight surgeries. One transplant was from a living donor — my uncle. It worked for six weeks. The second came from a deceased donor. It’s still working, and I’m doing everything I can to protect it.</p>
+    <section>
+      <h2>My Journey</h2>
+      <p>
+        My story started when I was diagnosed with kidney failure and began dialysis.
+        After two transplants and countless lessons along the way, I’ve learned how
+        important it is to have clear information and real support. This site combines
+        my personal experience with what I’ve learned from others in the kidney community.
+      </p>
+    </section>
 
-    <p>Before all of this, I was traveling over 50 times a year for work, competing in ballroom dance, and making wine that won national awards. I still do some of that when I can — but now, most of my time is focused on recovery, resilience, and helping others through what I’ve already been through.</p>
+    <section>
+      <h2>Why This Site Exists</h2>
+      <p>
+        When I was going through dialysis and transplant, I often felt overwhelmed and
+        alone. I created Tito Needs a Kidney to help others avoid that feeling—whether
+        you’re a patient, donor, or caregiver. Here you’ll find knowledge hubs,
+        testimonials, and step-by-step guides designed to make a tough journey
+        a little easier.
+      </p>
+    </section>
 
-    <p>This site is my way of paying it forward. Whether you’re living with kidney disease, supporting someone who is, or just curious about becoming a donor — I hope something here helps you feel a little less overwhelmed and a little more equipped.</p>
-
-    <p>If you want to know what it’s really like to live through this, I’ve written about it honestly — the good, the painful, and the absurd. My book <em>Tito Needs a Kidney</em> is available now, and I’m building out tools and resources to make this road easier for others.</p>
-
-    <p>Thanks for being here. You’re already making a difference.</p>
+    <section>
+      <h2>Want the Full Story?</h2>
+      <p>
+        My book <em>"Tito Needs a Kidney"</em> goes deeper into the ups and downs of my
+        experience—from life on dialysis to finally getting a transplant.
+      </p>
+      <a href="/book.html" class="button">📖 Read the Book</a>
+    </section>
   </main>
   <div data-include="includes/footer.html"></div>
   <script src="scripts/include.js"></script>
