--- a/book.html
+++ b/book.html
@@ -47,7 +47,7 @@
       </ul>
     </p>
 
-    <p><strong>Available in paperback and ebook formats.</strong> Visit your favorite bookstore or <a href="https://www.amazon.com/dp/B0CQCWW7RW" target="_blank" rel="noopener">buy on Amazon here</a>.</p>
+    <p><strong>Available in paperback and ebook formats.</strong> Visit your favorite bookstore or <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" target="_blank" rel="noopener">buy on Amazon here</a>.</p>
   </main>
 
   <div data-include="includes/footer.html"></div>
