--- a/hub/dialysis/index.html
+++ b/hub/dialysis/index.html
@@ -24,26 +24,60 @@
     <div data-include="../../includes/header.html"></div>
     <main class="content">
 <div data-include="../../includes/dialysis-subnav.html"></div>
-      <h1>Dialysis Overview</h1>
-      <p>
-        Dialysis replaces the work of your kidneys when they can no longer
-        filter your blood effectively. This section covers what to expect, who
-        you'll meet, and how to navigate the experience with more confidence.
-      </p>
+  <h1>Dialysis Hub</h1>
+  <p>
+    Dialysis replaces the work of your kidneys when they can no longer filter your 
+    blood effectively. This section covers what to expect, who you'll meet, and 
+    how to navigate treatment with confidence.
+  </p>
 
-      <ul>
-        <li><a href="staff.html">Clinic Staff Roles</a></li>
-        <li><a href="access.html">Access Types: Catheter, Fistula, Graft</a></li>
-        <li><a href="expectations.html">What to Expect at the Clinic</a></li>
-        <li><a href="schedule.html">Treatment Schedule & Transportation</a></li>
-        <li><a href="side-effects.html">Common Side Effects</a></li>
-      </ul>
+  <section class="testimonial-summary">
+    <h2><a href="staff.html">Clinic Staff Roles</a></h2>
+    <p>
+      Meet the team who will guide you through each dialysis session — nurses, 
+      techs, social workers, and doctors — and learn what each person does.
+    </p>
+  </section>
 
-      <p>
-        If you're just starting dialysis or supporting someone who is, this is a
-        good place to start. You don’t need to know everything on day one — but
-        knowing what questions to ask can make all the difference.
-      </p>
+  <section class="testimonial-summary">
+    <h2><a href="access.html">Access Types: Catheter, Fistula, Graft</a></h2>
+    <p>
+      Discover the different ways dialysis can connect to your bloodstream, 
+      how each type works, and what to expect during healing and care.
+    </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="expectations.html">What to Expect at the Clinic</a></h2>
+    <p>
+      From your first visit to your hundredth, understand the clinic setup, 
+      the machines, and the routine that helps keep you healthy.
+    </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="schedule.html">Treatment Schedule & Transportation</a></h2>
+    <p>
+      Learn how often dialysis happens, how long it lasts, and tips for 
+      managing rides and daily routines around your treatment schedule.
+    </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="side-effects.html">Common Side Effects</a></h2>
+    <p>
+      Fatigue, cramping, and other side effects can happen — this guide 
+      helps you recognize them early and know when to ask for help.
+    </p>
+  </section>
+
+  <section class="callout">
+    <p>
+      You don’t need to know everything on day one. 
+      Start here, learn at your own pace, and find out which questions 
+      to ask so you feel more prepared and supported.
+    </p>
+  </section>
     </main>
     <div data-include="../../includes/footer.html"></div>
   </body>
