--- a/hub/donation/index.html
+++ b/hub/donation/index.html
@@ -21,20 +21,60 @@
 <body>
   <div data-include="../../includes/header.html"></div>
   <main class="content">
-    <h1>Kidney Donation Overview</h1>
+  <h1>Living Kidney Donation Hub</h1>
+  <p>
+    Living kidney donation is an extraordinary gift that can change lives. 
+    This section explains who can donate, what testing involves, the risks 
+    and recovery process, and what life looks like after donation.
+  </p>
+
+  <section class="testimonial-summary">
+    <h2><a href="who-can-donate.html">Who Can Donate?</a></h2>
     <p>
-      Kidney donation is a generous and life-saving act. This section provides a clear explanation of what donors need to know — from evaluation through recovery.
+      Learn the medical and lifestyle factors that determine donor eligibility 
+      and what considerations are reviewed before you can donate a kidney.
     </p>
-    <ul>
-      <li><a href="who-can-donate.html">Who Can Donate?</a></li>
-      <li><a href="testing.html">Evaluation & Testing</a></li>
-      <li><a href="risks.html">Risks</a></li>
-      <li><a href="recovery.html">Recovery</a></li>
-      <li><a href="life-after.html">Life After Donation</a></li>
-    </ul>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="testing.html">Evaluation & Testing</a></h2>
     <p>
-      Whether you're considering living donation or just want to understand the process, these pages are here to guide you with facts and firsthand insight.
+      Understand the full donor evaluation process, including bloodwork, 
+      imaging scans, consultations, and psychological assessments.
     </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="risks.html">Risks of Donation</a></h2>
+    <p>
+      Every surgery has risks. This guide outlines the short-term surgical 
+      risks and the long-term considerations for living kidney donors.
+    </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="recovery.html">Recovery Process</a></h2>
+    <p>
+      From hospital stay to returning to normal activities, learn what to 
+      expect in the days and weeks following donation.
+    </p>
+  </section>
+
+  <section class="testimonial-summary">
+    <h2><a href="life-after.html">Life After Donation</a></h2>
+    <p>
+      Discover what long-term health and lifestyle changes, if any, are 
+      common for kidney donors and how they maintain overall wellness.
+    </p>
+  </section>
+
+  <section class="callout">
+    <p>
+      Donating a kidney is a major decision. This hub helps you understand 
+      the facts, ask the right questions, and feel supported every step 
+      of the way.
+    </p>
+  </section>
   </main>
   <div data-include="../../includes/footer.html"></div>
   <script src="../../scripts/include.js" defer></script>
