--- a/hub/transplant/surgery/index.html
+++ b/hub/transplant/surgery/index.html
@@ -22,45 +22,43 @@
   <div data-include="../../includes/header.html"></div>
   <main class="content">
     <div data-include="../../includes/transplant-subnav.html"></div>
-    
-      <h1>Kidney Transplant Hub</h1>
+  <h1>Transplant Surgery: Hospital Stay</h1>
   <p>
-    A kidney transplant is a journey with different stages—from preparation and 
-    testing to surgery and lifelong care afterward. This hub guides you through 
-    each phase with practical information, staff introductions, and lived 
-    experiences to help you feel prepared and supported.
+    The day of transplant surgery marks a major turning point in your kidney journey. 
+    This section explains what to expect during your hospital stay, introduces the 
+    surgical care team, and walks through immediate post-surgery recovery.
   </p>
 
   <section class="testimonial-summary">
-    <h2><a href="preop/index.html">Pre-Op: Preparing for Transplant</a></h2>
+    <h2><a href="surgery.html">The Transplant Surgery</a></h2>
     <p>
-      Learn what happens before your transplant, including evaluation and testing, 
-      finding a donor, understanding risks, and meeting the pre-op care team.
+      Learn how the surgery is performed, what happens during the operation, 
+      anesthesia details, and how the transplanted kidney is connected and 
+      begins working.
     </p>
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="surgery/index.html">Transplant Surgery: Hospital Stay</a></h2>
+    <h2><a href="staff-surgery.html">Surgical Staff Roles</a></h2>
     <p>
-      Understand what happens in the hospital during the transplant surgery: 
-      surgical staff roles, anesthesia, and immediate post-surgery recovery.
+      Meet the transplant surgeons, anesthesiologists, surgical nurses, and 
+      other specialists who work together during your procedure.
     </p>
   </section>
 
   <section class="testimonial-summary">
-    <h2><a href="postop/index.html">Post-Op: Life After Transplant</a></h2>
+    <h2><a href="recovery-inpatient.html">In-Hospital Recovery</a></h2>
     <p>
-      Explore recovery after discharge, ongoing follow-up care, post-op staff 
-      support, managing complications, and building a healthy life with 
-      your new kidney.
+      Understand what happens immediately after surgery—time in recovery rooms, 
+      pain management, monitoring, and early movement exercises to aid healing.
     </p>
   </section>
 
   <section class="callout">
     <p>
-      Each stage of the transplant process is different. Start where you are now, 
-      or explore them all to know what’s ahead and how to prepare for the best 
-      possible outcome.
+      A successful transplant is a team effort. Knowing who’s involved and what 
+      to expect in the hospital helps you feel more comfortable and ready for 
+      this life-changing procedure.
     </p>
   </section>
   </main>
