--- a/start-here.html
+++ b/start-here.html
@@ -25,29 +25,43 @@
 <body>
   <div data-include="includes/header.html"></div>
 
-  <main class="content">
-    <h1>Start Here</h1>
+   <main class="content">
+    <h1>Welcome – Let's Get You Started</h1>
+    <p>
+      If you’re here, you or someone you love is dealing with kidney disease, dialysis, 
+      or transplant. This site was built from my own journey through dialysis, two 
+      kidney transplants, and recovery. I’ve gathered everything I wish I had known 
+      into one place to help you feel less alone and more prepared.
+    </p>
 
-    <p>This site exists to make life with kidney failure less confusing and less lonely.</p>
+    <section class="callout">
+      <h2>Choose Your Path</h2>
+      <p>Click below to jump to resources tailored for your situation:</p>
+      <div class="cta">
+        <a href="/hub/dialysis/index.html" class="button">🩺 I'm a Patient on Dialysis</a>
+        <a href="/hub/transplant/index.html" class="button">💉 I'm Preparing for Transplant</a>
+        <a href="/hub/donation/index.html" class="button">🤝 I'm Considering Donating</a>
+      </div>
+    </section>
 
-    <p>If you or someone you care about is dealing with dialysis, transplant, or donation — this is for you.</p>
+    <section>
+      <h2>What You'll Find Here</h2>
+      <ul>
+        <li>Step-by-step guides to dialysis, transplant, and living donation</li>
+        <li>Personal stories from me and real-life donors</li>
+        <li>Simple explanations of medical terms and processes</li>
+        <li>Printable resources and future survival toolkits</li>
+      </ul>
+    </section>
 
-    <p>You’ll find:</p>
-    <ul>
-      <li>Pages that explain the process step by step</li>
-      <li>Testimonials from real people — both donors and recipients</li>
-      <li>Simple explanations of complicated things (like lab work or access options)</li>
-      <li>Personal stories about the things no one warned us about</li>
-    </ul>
-
-    <p>Start wherever makes sense for you:</p>
-    <ul>
-      <li><strong><a href="donor-info.html">Donor Info</a></strong> — facts about living donation</li>
-      <li><strong><a href="dialysis.html">Dialysis Hub</a></strong> — what to expect, and how to manage it</li>
-      <li><strong><a href="transplant.html">Transplant Hub</a></strong> — how evaluation works, what recovery is really like</li>
-    </ul>
-
-    <p>There’s no popups or login. Just real info. If you’re overwhelmed, take a break and come back later. It’ll still be here.</p>
+    <section>
+      <h2>Not Sure Where to Start?</h2>
+      <p>
+        Visit the <a href="/hub/index.html">Kidney Knowledge Hub</a> to explore all topics 
+        at your own pace or learn more about me and why I built this site.
+      </p>
+      <a href="/about.html" class="button">About Tito</a>
+    </section>
   </main>
 
   <div data-include="includes/footer.html"></div>
