--- a/testimonials/donor-amy.html
+++ b/testimonials/donor-amy.html
@@ -26,9 +26,15 @@
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>Amy S.</h1>
+ <div class="testimonial-header">
+    <h1>Amy</h1>
+    <p class="intro">
+      Amy shares her personal journey of living kidney donation, describing the motivation, 
+      testing process, and life after giving someone a second chance.
+    </p>
+  </div>
 
-    <section class="testimonial">
+    <section class="testimonial-body">
       <p>I donated a kidney to my cousin in 2005. In 2004, he had woken up acutely blind. It turned out that hypertension secondary to renal failure had caused the blood vessels in his retinas to rupture. It was the first indication that he had that something was wrong. By the time he was diagnosed with renal failure, the underlying cause was no longer apparent. His doctors finally concluded that it had likely been a viral issue, although the specific virus could never be isolated or identified. He began dialysis. Fortunately, once his hypertension was addressed and the blood reabsorbed, his sight was restored.</p>
 
       <p>My aunt reached out to family and friends to let everyone know what was happening and who to contact if anyone was interested in being a donor. There was never any pressure, but I did feel that it would be the right thing for me to get tested.</p>
@@ -48,7 +54,9 @@
       <p class="testimonial-author">— Amy S.</p>
     </section>
 
-    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
+ <div class="cta">
+    <a href="/donor-testimonials.html" class="button">← Back to All Stories</a>
+  </div>
   </main>
 
   <div data-include="../includes/footer.html"></div>
