--- a/testimonials/donor-john.html
+++ b/testimonials/donor-john.html
@@ -26,9 +26,15 @@
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
-    <h1>John G.</h1>
+      <div class="testimonial-header">
+    <h1>John</h1>
+    <p class="intro">
+      John shares his journey of becoming a living kidney donor during the COVID-19 pandemic,
+      including the testing process, surgery experience, and life after donation.
+    </p>
+  </div>
 
-    <section class="testimonial">
+    <section class="testimonial-body">
       <p>In the beginning days of the COVID-19 pandemic, I had a chance encounter with a co-worker as we were packing up our cubicles in order to start working remotely. It happened that he mentioned that he was looking for a kidney donor, as he had been on dialysis for a few years. As luck would have it, we were the same blood type and it seemed that I might be a potential match.</p>
 
       <p>The initial testing consisted of blood and urine tests for me and did not rule me out as a potential donor. The next round of testing was non-invasive and included more blood tests, a GFR test and a painless echocardiogram. After a few phone interviews with doctors, my advocate team and a psychological evaluation, the decision was made in October to go ahead with the transplant. Unfortunately, elective surgery was not being scheduled in the early days of the pandemic. However, shortly before Christmas of 2020, we were given a green light and the surgery was scheduled for February of 2021.</p>
@@ -48,7 +54,9 @@
       <p class="testimonial-author">— John G.</p>
     </section>
 
-    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
+ <div class="cta">
+    <a href="/donor-testimonials.html" class="button">← Back to All Stories</a>
+  </div>
   </main>
 
   <div data-include="../includes/footer.html"></div>
