--- a/testimonials/donor-nancy.html
+++ b/testimonials/donor-nancy.html
@@ -20,15 +20,19 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
   <div data-include="../includes/header.html"></div>
 
   <main class="content">
+      <div class="testimonial-header">
     <h1>Nancy M. Stabins</h1>
+    <p class="intro">
+      Nancy shares her journey of supporting a loved one through kidney disease 
+      and the transplant process, offering encouragement and real-world perspective 
+      for other families and friends.
+    </p>
+  </div>
 
-    <section class="testimonial">
+    <section class="testimonial-body">
       <p>It started with a wine judge, young, in the prime of his life, and I found out he needed a kidney. So, I started a fundraiser to help him out. My thoughts were that if someone needed a kidney, what could help more than to have some extra money while recuperating from the operation. Little did I realize the scope of his illness and what the next 3 months would mean to me.</p>
 
       <p>The fundraiser involved wine, of course, wine that I had been “cellaring” for a long time. The event was spectacular. Only 25 people were invited to taste the 15 bottles of wine. The event sold out in 2 hours. The wines were amazing but during this event, the young man, Tito, said how he needed a kidney and the 5 ounces of wine in front of everyone was all the liquid he could drink in a day. That realization hit me like a ton of bricks. My thought was, “he doesn’t need money, he needs a KIDNEY.”</p>
@@ -48,7 +52,9 @@
       <p class="testimonial-author">— Nancy McCullough Stabins, RN<br>11/27/2023</p>
     </section>
 
-    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
+ <div class="cta">
+    <a href="/donor-testimonials.html" class="button">← Back to All Stories</a>
+  </div>
   </main>
 
   <div data-include="../includes/footer.html"></div>
