--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
 </head>
 <body>
   <div data-include="includes/header.html"></div>
+  
+  
 
   <main class="content">
     <h1>Welcome to Tito Needs a Kidney</h1>
     <p>This site is a living guide for people dealing with kidney failure, dialysis, transplant, or living donation — built from lived experience, not just theory.</p>
+    
+    <section class="callout">
+  <h2>About Tito</h2>
+  <p>
+    I'm a kidney transplant recipient who has been through dialysis, two transplants,
+    and the long recovery process. This site is my way of sharing what I wish I had known—
+    practical tips, honest stories, and resources for patients, donors, and families.
+  </p>
+  <a href="/about.html" class="button">Read My Story</a>
+</section>
+
 
     <h2>Explore the Topics</h2>
     <ul>
