--- a/testimonials/donor-luis.html
+++ b/testimonials/donor-luis.html
@@ -20,15 +20,21 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <link rel="stylesheet" href="/styles/main.css" />
-</head>
-<body>
  <div data-include="../includes/header.html"></div>
 
-  <main class="content">
-    <h1>Luis B.</h1>
 
-    <section class="testimonial">
+
+  <main class="content">
+   <div class="testimonial-header">
+  <h1>Luis B.</h1>
+  <p class="intro">
+    A firsthand account of choosing to become a living kidney donor—the challenges, 
+    the recovery, and why Luis would do it again in a heartbeat.
+  </p>
+</div>
+    
+
+    <section class="testimonial-body">
       <p>Early in the morning of January 25th of this year (2023), I checked into the hospital at the University of Colorado to have elective surgery. I had never had a surgery before, so I was understandably anxious and fearful about what I was about to do. However, my overriding feeling at the time was determination…I was determined to go through this surgery because of the possibility of what the surgery could do. In a little over an hour, they would roll me into an operating room, remove my left kidney, put the kidney onto a plane to Rochester, NY, and then put that kidney into my nephew, Tito. Our hope was that this kidney would provide a life-saving treatment for Tito so that he could get off of dialysis and get some semblance of a normal life. Unfortunately (as evidenced by you reading this post on this website), through no fault of his own, Tito’s new kidney failed and he is in need of another kidney. I wanted to share my story in the hopes that my experience could help someone along their path of choosing to be a kidney donor.</p>
 
       <p>In June of 2021 we found out that Tito needed to go on dialysis. He had been having health problems over the previous number of months and we were shocked to hear that he had to go onto dialysis so soon. At the time he was tentatively asking friends and family if anyone was willing to be a donor. I took a look at some online documentation about the process and about halfway through one of the pamphlets I started feeling dizzy…my heart was racing and I had a cold sweat. There was no way I could donate if I couldn’t even read through the pamphlet! Besides, I had elevated blood pressure and obstructive sleep apnea for years and our family had a long history of high blood pressure, heart disease, etc. There was no way I would qualify as a donor. I decided the best thing I could do would be to get Tito a number of supplies to help with his dialysis treatments and see if there was anything else he needed. It felt a little wrong not to look into it further, but I let my fears and justifications keep me from taking any further action.</p>
@@ -60,7 +66,9 @@
       <p class="testimonial-author">— Luis B.</p>
     </section>
 
-    <p><a href="/donor-testimonials.html">← Back to all donor stories</a></p>
+  <div class="cta">
+    <a href="/donor-testimonials.html" class="button">← Back to All Stories</a>
+  </div>
   </main>
 
 <div data-include="../includes/footer.html"></div>
