--- a/book.html
+++ b/book.html
@@ -25,6 +25,15 @@
 
   <main class="content">
     <h1>Tito Needs a Kidney (The Book)</h1>
+    <div class="callout">
+  <p>
+    📖 <strong>About This Book</strong><br>
+    <em>Tito Needs a Kidney</em> is a personal story of life on dialysis, 
+    navigating two kidney transplants, and the road to recovery. 
+    It’s meant to inform and inspire—not replace professional medical advice. 
+    Always talk with your healthcare team for medical decisions.
+  </p>
+</div>
 
     <p><strong>“Tito Needs a Kidney”</strong> is a firsthand account of what it’s really like to survive kidney failure — told with clarity, honesty, and a refusal to sugarcoat what matters.</p>
 
