--- a/donor-info.html
+++ b/donor-info.html
@@ -26,6 +26,14 @@
   <div data-include="includes/header.html"></div>
 
   <main class="content">
+  <div class="callout">
+  <p>
+    💡 <strong>Thinking about donating a kidney?</strong><br>
+    This page shares general information to help you understand the process. 
+    Every donor’s journey is unique, so be sure to speak with your transplant 
+    team for medical advice and guidance specific to you.
+  </p>
+</div>
     <section id="life-expectancy">
       <h2>Life Expectancy</h2>
       <p>
