--- a/hub/index.html
+++ b/hub/index.html
@@ -62,6 +62,14 @@
         into the emotional and physical journey of living kidney donation.
       </p>
     </section>
+    <div class="callout">
+  <p>
+    🧠 <strong>Explore the Full Hub</strong><br>
+    The Kidney Knowledge Hub is your starting point for understanding kidney health, 
+    dialysis, transplant, and donation. Dive into each section at your own pace, 
+    and check back as we continue adding more guides and resources.
+  </p>
+</div>
   </main>
   <div data-include="../includes/footer.html"></div>
 </body>
