--- a/hub/transplant/postop/life-after.html
+++ b/hub/transplant/postop/life-after.html
@@ -18,17 +18,17 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
     <h1>Life After Transplant</h1>
     <p>
       Understand long-term care after a kidney transplant, including medication routines,
       lifestyle adjustments, and staying healthy for years to come.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
