--- a/hub/transplant/preop/evaluation.html
+++ b/hub/transplant/preop/evaluation.html
@@ -18,17 +18,17 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
     <h1>Evaluation for Transplant</h1>
     <p>
       This section explains the evaluation process for transplant candidates, including 
       medical tests, consultations, and determining eligibility.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
