--- a/hub/transplant/postop/complications.html
+++ b/hub/transplant/postop/complications.html
@@ -18,17 +18,17 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
     <h1>Transplant Complications</h1>
     <p>
       Information about common complications following a kidney transplant, including 
       rejection, infection, and medication side effects, with guidance on management.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
