--- a/hub/transplant/postop/index.html
+++ b/hub/transplant/postop/index.html
@@ -19,9 +19,9 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
     
    <h1>Post-Op: Life After Kidney Transplant</h1>
   <p>
@@ -71,8 +71,8 @@
     </p>
   </section>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
