--- a/hub/transplant/postop/staff-postop.html
+++ b/hub/transplant/postop/staff-postop.html
@@ -18,17 +18,17 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
     <h1>Transplant Staff</h1>
     <p>
       Meet the different specialists involved in a kidney transplant, including surgeons,
       nephrologists, coordinators, and nurses, and learn their roles in patient care.
     </p>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
