--- a/hub/transplant/preop/index.html
+++ b/hub/transplant/preop/index.html
@@ -19,9 +19,9 @@
   <link rel="stylesheet" href="/styles/main.css" />
 </head>
 <body>
-  <div data-include="../../includes/header.html"></div>
+  <div data-include="../../../includes/header.html"></div>
   <main class="content">
-    <div data-include="../../includes/transplant-subnav.html"></div>
+    <div data-include="../../../includes/transplant-subnav.html"></div>
       <h1>Pre-Op: Preparing for Kidney Transplant</h1>
   <p>
     Before receiving a kidney transplant, you’ll go through an evaluation and 
@@ -70,8 +70,8 @@
     </p>
   </section>
   </main>
-  <div data-include="../../includes/footer.html"></div>
-  <script src="../../scripts/include.js" defer></script>
+  <div data-include="../../../includes/footer.html"></div>
+  <script src="../../../scripts/include.js" defer></script>
 </body>
 </html>
 
