--- a/hub/dialysis/index.html
+++ b/hub/dialysis/index.html
@@ -19,6 +19,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
     <script src="../../scripts/include.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
     <div data-include="../../includes/header.html"></div>
@@ -32,7 +34,7 @@
   </p>
 
   <section class="testimonial-summary">
-    <h2><a href="staff.html">Clinic Staff Roles</a></h2>
+    <h2><a href="/hub/dialysis/staff/index.html">Clinic Staff Roles</a></h2>
     <p>
       Meet the team who will guide you through each dialysis session — nurses, 
       techs, social workers, and doctors — and learn what each person does.
