--- a/hub/dialysis/staff/clinic-administrator.html
+++ b/hub/dialysis/staff/clinic-administrator.html
@@ -23,6 +23,8 @@
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
     <script src="../../../scripts/include.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
     <!-- Header -->
@@ -31,6 +33,7 @@
     <main class="content">
       <!-- Dialysis subnav -->
       <div data-include="../../../includes/dialysis-subnav.html"></div>
+  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
 
       <h1>Clinic Administrator</h1>
 
