--- a/hub/dialysis/staff/nurse.html
+++ b/hub/dialysis/staff/nurse.html
@@ -25,6 +25,8 @@
 
     <!-- Include loader (one level deeper than /hub/dialysis/*.html) -->
     <script src="../../../scripts/include.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
     <!-- Header include -->
@@ -33,6 +35,7 @@
     <main class="content">
       <!-- Dialysis subnav include -->
       <div data-include="../../../includes/dialysis-subnav.html"></div>
+  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
 
       <h1>Dialysis Nurse (RN)</h1>
 
