--- a/hub/dialysis/staff/technician.html
+++ b/hub/dialysis/staff/technician.html
@@ -24,6 +24,8 @@
 
     <!-- Include loader (one level deeper than side-effects.html) -->
     <script src="../../../scripts/include.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   </head>
   <body>
     <!-- Header include (one level deeper) -->
@@ -32,6 +34,7 @@
     <main class="content">
       <!-- Dialysis subnav include -->
       <div data-include="../../../includes/dialysis-subnav.html"></div>
+  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
 
       <h1>Dialysis Technician / Patient Care Technician (PCT)</h1>
 
