--- a/hub/index.html
+++ b/hub/index.html
@@ -19,6 +19,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/main.css" />
     <script src="../scripts/include.js" defer></script>
+  <script src="/scripts/include.js" defer></script>
+  <script src="/scripts/active-link.js" defer></script>
   </head>
 <body>
   <div data-include="../includes/header.html"></div>
