--- a/hub/dialysis/staff/index.html
+++ b/hub/dialysis/staff/index.html
@@ -31,7 +31,7 @@
     <div data-include="../../../includes/header.html"></div>
     <main class="content">
       <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
 
       <h1>Clinic Staff Roles</h1>
       <p>
@@ -40,7 +40,7 @@
       </p>
 
       <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/nurse.html">Nurse (RN)</a></h2>
+  <h2><a href="nurse.html">Nurse (RN)</a></h2>
   <p>
     Monitors your health during treatments, manages medications, and responds
     to complications. Your primary point of contact for medical concerns during
@@ -49,7 +49,7 @@
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/technician.html">Patient Care Technician (PCT)</a></h2>
+  <h2><a href="technician.html">Patient Care Technician (PCT)</a></h2>
   <p>
     Prepares dialysis machines, connects and disconnects patients, monitors
     vital signs, and alerts the nurse to any issues during your run.
@@ -57,7 +57,7 @@
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/social-worker.html">Social Worker</a></h2>
+  <h2><a href="social-worker.html">Social Worker</a></h2>
   <p>
     Supports your emotional well-being and connects you with transportation,
     benefits, and community resources to help manage life on dialysis.
@@ -66,7 +66,7 @@
 
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/dietitian.html">Dietitian</a></h2>
+  <h2><a href="dietitian.html">Dietitian</a></h2>
   <p>
     Guides your nutrition, fluid limits, and lab goals to keep your treatments effective 
     and support your overall health.
@@ -74,7 +74,7 @@
 </section>
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/nephrologist.html">Nephrologist</a></h2>
+  <h2><a href="nephrologist.html">Nephrologist</a></h2>
   <p>
     Your kidney specialist—sets your dialysis prescription, monitors long-term kidney 
     health, and coordinates your overall care plan.
@@ -83,7 +83,7 @@
 
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/floor-supervisor.html">Floor Supervisor / Charge Nurse</a></h2>
+  <h2><a href="floor-supervisor.html">Floor Supervisor / Charge Nurse</a></h2>
   <p>
     Oversees the dialysis shift, coordinates staff assignments, and manages urgent care 
     needs on the treatment floor to keep operations running smoothly.
@@ -101,7 +101,7 @@
 
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/receptionist.html">Patient Services Coordinator</a></h2>
+  <h2><a href="receptionist.html">Patient Services Coordinator</a></h2>
   <p>
     Manages check-ins, schedules treatments, and coordinates transfers to other units 
     when you travel or relocate.
@@ -110,7 +110,7 @@
 
 
 <section class="testimonial-summary">
-  <h2><a href="/dialysis/staff/clinic-administrator.html">Unit Manager / Clinic Administrator</a></h2>
+  <h2><a href="clinic-administrator.html">Unit Manager / Clinic Administrator</a></h2>
   <p>
     Leads the clinic, ensures quality standards are met, and resolves ongoing 
     facility or operational concerns that affect patient care.
