--- a/hub/dialysis/staff/index.html
+++ b/hub/dialysis/staff/index.html
@@ -28,10 +28,10 @@
   </head>
 
   <body>
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
     <main class="content">
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-      <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+      <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Clinic Staff Roles</h1>
       <p>
@@ -118,7 +118,7 @@
 </section>
     </main>
 
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
