--- a/hub/dialysis/staff/nurse.html
+++ b/hub/dialysis/staff/nurse.html
@@ -30,12 +30,12 @@
   </head>
   <body>
     <!-- Header include -->
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
 
     <main class="content">
       <!-- Dialysis subnav include -->
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+  <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Dialysis Nurse (RN)</h1>
 
@@ -80,7 +80,7 @@
     </main>
 
     <!-- Footer include -->
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
