--- a/hub/dialysis/staff/receptionist.html
+++ b/hub/dialysis/staff/receptionist.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <!-- Header -->
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
 
     <main class="content">
       <!-- Dialysis subnav -->
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+  <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Patient Services Coordinator (Receptionist)</h1>
 
@@ -76,7 +76,7 @@
     </main>
 
     <!-- Footer -->
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
