--- a/hub/dialysis/staff/technician.html
+++ b/hub/dialysis/staff/technician.html
@@ -29,12 +29,12 @@
   </head>
   <body>
     <!-- Header include (one level deeper) -->
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
 
     <main class="content">
       <!-- Dialysis subnav include -->
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+  <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Dialysis Technician / Patient Care Technician (PCT)</h1>
 
@@ -82,7 +82,7 @@
     </main>
 
     <!-- Footer include (one level deeper) -->
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
