--- a/hub/dialysis/staff/financial-coordinator.html
+++ b/hub/dialysis/staff/financial-coordinator.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <!-- Header -->
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
 
     <main class="content">
       <!-- Dialysis subnav -->
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+  <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Financial Coordinator</h1>
 
@@ -77,7 +77,7 @@
     </main>
 
     <!-- Footer -->
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
