--- a/hub/dialysis/staff/nephrologist.html
+++ b/hub/dialysis/staff/nephrologist.html
@@ -30,12 +30,12 @@
   </head>
   <body>
     <!-- Header include -->
-    <div data-include="../../../includes/header.html"></div>
+    <div data-include="/includes/header.html"></div>
 
     <main class="content">
       <!-- Dialysis subnav include -->
-      <div data-include="../../../includes/dialysis-subnav.html"></div>
-  <div data-include="../../../includes/dialysis-staff-subnav.html"></div>
+      <div data-include="/includes/dialysis-subnav.html"></div>
+  <div data-include="/includes/dialysis-staff-subnav.html"></div>
 
       <h1>Nephrologist</h1>
 
@@ -79,7 +79,7 @@
     </main>
 
     <!-- Footer include -->
-    <div data-include="../../../includes/footer.html"></div>
+    <div data-include="/includes/footer.html"></div>
   </body>
 </html>
 
